--- a/learn_more.css
+++ b/learn_more.css
@@ -49,17 +49,16 @@ h1,h2,h3,h4,h5,h6{
       justify-content: center;
       width: 100%;
       height: 100vh;
-      background-color: red;
-      background-image: url(front/ss.jpg) center no-repeat;
-      animation: eye 20s infinite;
+      background-image: url(ph.jpg) center no-repeat;
+      animation: eye 30s infinite;
       animation-iteration-count: infinite linear;
       -webkit-background-size:cover ;
         background-size: cover;
    }
    @keyframes eye{
-      20%{background-image: url(front/koo.jpg);}
-      45%{background-image: url(front/ss.jpg);}
-       65%{background-image: url(front/ph.jpeg);}
+      20%{background-image: url(koo.jpg);}
+      45%{background-image: url(ss.jpg);}
+       65%{background-image: url(ph.jpeg);}
    }
    .intro_inner{
       width: 100%;
@@ -410,7 +409,7 @@ h1,h2,h3,h4,h5,h6{
   padding-top:3vw;
   padding-left: 27vw;
 }
-@media(max-width:700px){
+@media(max-width:667px){
   .nike{
     font-size: 4vw;
     color: rgba(255, 255, 255, 0.404);
@@ -501,7 +500,150 @@ h1,h2,h3,h4,h5,h6{
   .cost{
     margin-top: -2vw;
   }
-  .footer {
+   /*FOOTER*/
+   .footer {
+     height: 400px;
+   }
+ 
+   .logo_footer {
+     margin-top: -20px;
+     margin-left: 190px;
+   }
+ 
+   .column_1_footer {
+		margin-left: -450px;
+		margin-right: 45px;
+		margin-top: 80px;
+	}
+
+	.column_2_footer {
+		margin-top: 80px;
+    margin-left: 40px;
+	}
+
+	.column_3_footer {
+		margin-top: 80px;
+		margin-left: -140px;
+	}
+ 
+   .copyright_footer {
+     margin-left: 150px;
+     margin-top: 295px;
+   }
+ 
+   /*REGISTRATON*/
+   .popup-content {
+     width: 400px;
+     margin-top: -60px;
+   }
+ 
+   #username {
+     margin-left: 90px;
+   }
+ 
+   #password {
+     margin-left: 90px;
+   }
+  .hoodie{
+    margin-left: -30vw;
+    margin-top: -2vw;
+  }
+  .gmail{
+    margin-left: -10vw;
+  }
+}   
+@media screen and (min-width:667px) and (max-width:1024px){
+  .nike{
+    font-size: 4vw;
+    color: rgba(255, 255, 255, 0.404);
+    
+    text-align: center;
+  }
+  .adidas{
+    padding-top: 5vw;
+    font-size: 3.1vw;
+    margin-left: 2vw;
+    color: wheat;
+    margin-right: 2vw;
+  }
+  .puma{
+    display: inline-block;
+  }
+  .suret{
+    font-weight: bold;
+    padding-bottom: 10vw;
+    padding-top: 10vw;
+    margin-left: 15vw;
+    width: 50vw;
+  }
+  .touch{
+    font-size: 5vw;
+    margin-left: -72vw;
+  }
+  .idea{
+    text-align: center;
+    padding-top: 15vw;
+    font-size: 3.5vw;
+    margin-left: -40vw;
+  }
+  .developed{
+    display: inline-block;
+  }
+  .img{
+    margin-top: 5vw;
+    width: 30vw;
+    margin-bottom: 20vw;
+    margin-left: -6vw;
+  }
+  .devel{
+    
+    margin-bottom: -60vw;
+    margin-left: -14vw;
+    font-size: 6vw;
+  }
+  .current{
+    text-align: center;
+    margin-right: -33vw;
+    padding-top: 15vw;
+    font-size: 2.9vw;
+  }
+  .zaq{
+    display: block;
+  }
+  
+  .cucu{
+    margin-top: 5vw;
+    width: 30vw;
+    margin-bottom: 25vw;
+    margin-left: 35vw;
+  }
+  .develo{
+    text-align: center;
+    padding-top: 65vw;
+    margin-left: -87vw;
+  }
+  .class{
+    text-align: center;
+    margin-left: -45vw;
+    padding-top: 15vw;
+    font-size: 2.9vw;
+  }
+  .test{
+    font-size: 3vw;
+    color: #00AEEF;
+  }
+  .say{
+    font-size: 6vw;
+    font-weight: bold;
+  }
+  .very{
+    font-size: 3vw;
+    text-align: center;
+  }
+  .cost{
+    margin-top: -2vw;
+  }
+  .footer{
 		height: 400px;
 	}
 
@@ -511,18 +653,21 @@ h1,h2,h3,h4,h5,h6{
 	}
 
 	.column_1_footer {
-		margin-left: -420px;
+		margin-left: -370px;
 		margin-right: 45px;
 		margin-top: 80px;
 	}
 
 	.column_2_footer {
+    margin-left: 200px;
 		margin-top: 80px;
+    
 	}
 
 	.column_3_footer {
-		margin-top: 80px;
-		margin-left: -155px;
+    text-align: center;
+		margin-top:0px;
+		margin-left: 120px;
 	}
 
 	.copyright_footer {
@@ -544,10 +689,10 @@ h1,h2,h3,h4,h5,h6{
 		margin-left: 90px;
 	}
   .hoodie{
-    margin-left: -30vw;
+    margin-left: -10vw;
     margin-top: -2vw;
   }
   .gmail{
     margin-left: -10vw;
-  }
-}                                                                                                                                                                                                
+  } 
+}                                                                                                                                                                                                                                                                                                                                                                                             
