--- a/red_coffee.css
+++ b/red_coffee.css
@@ -503,11 +503,23 @@ font-size: 0.9516837481698389vw;
 font-size: 0.9516837481698389vw;
  }
  @media(max-width:667px){
+   .coffee p{
+      margin-left: -18vw;
+      font-size:4vw;
+   }
+   .query{
+      margin-left: -14vw;
+      font-size: 3vw;
+   }
+
     .header_inner{
       display: inline;
     }
     .container{
       margin-bottom: -6vw;
+    }
+    .card-title{
+    font-size:4vw ;
     }
     .nav_link{
       margin-left: -2vw;
@@ -515,12 +527,12 @@ font-size: 0.9516837481698389vw;
       margin-top: -7vw;
       padding-top: -13vw;
     }
-    body{
-      background-image: url(ss.jpg);
-      background-position: bottom 50px right 100px;
+    #emails{
+      width: 5vw;
     }
+    
     .club{
-      padding-top: 75vw;
+      padding-top: 25vw;
     }
     .main{
       display: inline-block;
@@ -528,5 +540,84 @@ font-size: 0.9516837481698389vw;
     .product-list p{
       font-size: 10vw;
     }
+    .class{margin-top: 2vw;}
+    .product-list h3{
+      font-size: 5vw;
+    }
+    .button{
+      font-size: 4vw;
+      height: 5vw;
+    }
+    .small{
+      font-size:4vw;
+    }
+    .product-item{
+      width: 60vw;
+      align-items: center;
+      margin-left: 13vw;
+    }
+   
+    .main2{
+      display: inline-block;
+      
+    }
+    .main3{
+      display: inline-block;
+      margin-left: 0.1vw;
+    }
+    .main4{
+      display: inline-block;
+      margin-left: -6vw;
+    }
+    .footer{
+		height: 400px;
+	}
+
+	.logo_footer {
+		margin-top: -20px;
+		margin-left: 190px;
+	}
+
+	.column_1_footer {
+		margin-left: -450px;
+		margin-right: 45px;
+		margin-top: 80px;
+	}
+
+	.column_2_footer {
+    margin-left: 30px;
+		margin-top: 80px;
     
+	}
+
+	.column_3_footer {
+    text-align: center;
+		margin-top:50px;
+		margin-left: -120px;
+	}
+
+	.copyright_footer {
+		margin-left: 150px;
+		margin-top: 295px;
+	}
+   	/*REGISTRATON*/
+	.popup-content {
+		width: 400px;
+		margin-top: -60px;
+	}
+
+	#username {
+		margin-left: 90px;
+	}
+
+	#password {
+		margin-left: 90px;
+	}
+  .hoodie{
+    margin-left: -10vw;
+    margin-top: -2vw;
+  }
+  .gmail{
+    margin-left: -20vw;
+  } 
    }
